# mnemoquarium

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
src/mnemoquarium/: __init__.py  cli.py  compare.py  display.py  export.py  model.py  render.py  snapshot.py
tests/: test_simulation.py
