[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemoquarium"
version = "0.2.0"
description = "A deterministic memory aquarium where phrases grow into tiny artificial ecosystems."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sebby1770" }
]
keywords = ["artificial-life", "cli", "simulation", "generative", "terminal"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Artistic Software",
  "Topic :: Games/Entertainment :: Simulation"
]

[project.scripts]
mnemoquarium = "mnemoquarium.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
